src/test/compile-fail/block-must-not-have-result-for.rs
fn main() {
    for vec::each(~[0]) |_i| {  //~ ERROR A for-loop body must return (), but
        true
    }
}